try to fix the horizontal scroll issue on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@ html, body{
     height: 100vh;
     width: 100vw;
     font-family:"roboto", sans-serif;
+    max-width: 100%;
     scroll-behavior: smooth;
 }
 
